# mining-misconceptions-in-math

./: .gitignore  LICENSE  README.md  requirements.txt  reset.sh  setup.cfg
.github/workflows/: CI.yaml
config/: data_config.json  recall_model_config.json  trainer_config.json
docs/: contrastive_dataset.md  recall_model.md
notebooks/: contrastive_dataset_eda.ipynb  eda.ipynb  embedding_generation.ipynb  loss_function.ipynb  misconception_topic_modeling.ipynb  peft.ipynb  recall_modeling.ipynb  stella.ipynb  train_test_split.ipynb
src/configurations/: data_config.py  recall_model_config.py  trainer_config.py
src/constants/: column_names.py  dll_paths.py  paths.py  wandb_project.py
src/data_preparation/: create_contrastive_csv.py  create_qa_pair_csv.py  get_dataloader.py
src/data_preparation/datasets/: abstract_dataset.py  base_dataset.py  base_dataset_v2.py  misconception_dataset.py  (+1 more)
src/evaluation/: fine_grain_metrics.py
src/model_development/: latent_attention_module.py  loss_functions.py  recall_model.py  stella_model.py  two_tower_model.py
src/pipeline/: embbed_misconceptions.py  inference_model.py  inference_models.py  inference_recall_model.py  train_model.py  train_recall_model.py
src/utils/: memory_calculator.py  seed_everything.py  wandb_artifact.py
tests/configurations/: test_data_config.py  test_recall_model_config.py  test_trainer_config.py
tests/evaluation/: test_fine_grain_metrics.py
tests/model_development/: test_latent_attention_module.py  test_loss_functions.py  test_recall_model.py
tests/utils/: test_wandb_artifact.py
(+24 files in other folders)
