[metadata]
name = Mining Misconceptions in Math
description = Kaggle Challenge: Mining Misconceptions in Math
       
        This package contains code for the kaggle challenge. The repository is structured as follows:
        1. `src`: contains the code for the challenge
        2. `tests`: contains the tests for the code
        3. `notebooks`: contains the notebooks for the challenge
        4. `data`: contains the data for the challenge
        5. `docs`: contains the documentations, wikis, and reports.
        6. `output_dir`: Contains model checkpoints and other output files.
   
        License: MIT
       
version = 0.6.8
author = Shakleen Ishfar
author_email = shakleenishfar@gmail.com
url = https://github.com/Shakleen/mining-misconceptions-in-math

[options]
packages = find:

[options.packages.find]
exclude =
    tests
    docs
    notebooks
    data
    wandb
    output_dir
    artifacts
